1. [Django middleware] raise Exception instead of custom http response when api mismatch doc 2. [spec] fix bug: not all nullable options are converted
