# demo/docs/api.yaml
@@ -90,6 +90,7 @@ components:
       required:
       - id
       - name
+      - photos
       properties:
         id:
           type: integer
@@ -98,10 +99,24 @@ components:
           type: string
         tag:
           type: string
+        photos:
+          type: array
+          items:
+            $ref: '#/components/schemas/Photo'
     Pets:
       type: array
       items:
         $ref: '#/components/schemas/Pet'
+    Photo:
+      type: object
+      properties:
+        timestamp:
+          type: integer
+        url:
+          type: string
+        description:
+          type: string
+          nullable: true
     Error:
       type: object
       required:
